# pytextgen

./: .commitlintrc.mjs  .gitignore  .markdownlint.json  .markdownlint.jsonc  .pre-commit-config.yaml  .rumdl.toml  AGENTS.md  README.md  __init__.py  __main__.py  commitlint.config.mjs  globals.py  info.py  main.py  msg.txt  opencode.json  prek.toml  pyproject.toml  pyrightconfig.json  requirements.txt  setup.py  util.py  version.py
.agents/instructions/: agents.instructions.md  architecture.instructions.md  common-workflows.instructions.md  dependencies.instructions.md  developer-workflows.instructions.md  editing-guidelines.instructions.md  formatting.instructions.md  git-commits.instructions.md  python-entry-points.instructions.md  release.instructions.md  testing.instructions.md
.agents/prompts/: bump-version.prompt.md  commit-staged.prompt.md
.agents/skills/validate-builds/: SKILL.md
.github/: .rumdl.toml  dependabot.yml
.github/instructions/: .rumdl.toml  agents.instructions.md  architecture.instructions.md  common-workflows.instructions.md  dependencies.instructions.md  developer-workflows.instructions.md  editing-guidelines.instructions.md  formatting.instructions.md  git-commits.instructions.md  release.instructions.md  security.instructions.md  testing.instructions.md
.github/prompts/: bump-version.prompt.md  commit-staged.prompt.md
.github/skills/validate-builds/: SKILL.md
.github/workflows/: ci.yml
clear/: __main__.py  main.py
generate/: __init__.py  __main__.py  _options.py  _read.py  _write.py  main.py  options.py  parser.py  read.py  types.py  venv.py  write.py  writer.py
generate/environment/: __init__.py  read.py  result.py  util.py
generate/virenv/: __init__.py  _env.py  env.py  read.py  util.py
io/: __init__.py  _env.py  _options.py  _read.py  _util.py  _write.py  util.py
io/virenv/: __init__.py  config.py  read.py  util.py
src/pytextgen/: __init__.py  __main__.py  main.py  meta.py  util.py  utils.py
src/pytextgen/clear/: __init__.py  __main__.py  main.py
src/pytextgen/generate/: __init__.py  __main__.py  main.py
src/pytextgen/io/: __init__.py  _env.py  _options.py  _read.py  _write.py  env.py  options.py  read.py  util.py  utils.py  write.py
src/pytextgen/io/virenv/: __init__.py  config.py  configs.py  meta.py  read.py  util.py  utils.py
src/pytextgen/io/virenv/compat/: __init__.py  config.py  gen.py  read.py  util.py
strip/: main.py
tests/: __init__.py  conftest.py  test_basic.py  test_docstrings.py  test_git_executable.py  test_module_exports.py  utils.py
tests/pytextgen/: test___init__.py  test_meta.py
tests/src/: __init__.py
tests/src/pytextgen/: __init__.py  test___main__.py  test_main.py  test_meta.py  test_utils.py
tests/src/pytextgen/clear/: __init__.py  test___main__.py  test_main.py
tests/src/pytextgen/generate/: __init__.py  test___main__.py  test_main.py
tests/src/pytextgen/io/: __init__.py  test_env.py  test_options.py  test_read.py  test_read_MarkdownReader.py  test_utils.py  test_write_ClearWriter.py  test_write_PythonWriter.py
tests/src/pytextgen/io/virenv/: __init__.py  test_configs.py  test_meta.py  test_read.py  test_utils.py
tests/src/pytextgen/io/virenv/compat/: __init__.py  test_reexports.py
utils/: __init__.py  data.py  types.py
