[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

# update `__init__.py`
[project]
authors = [
	{name = "William So", email = "polyipseity@gmail.com"},
]
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Framework :: AsyncIO",
	"Intended Audience :: Other Audience",
	"License :: OSI Approved",
	"License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
	"Natural Language :: English",
	"Operating System :: OS Independent",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Topic :: Text Processing",
	"Topic :: Text Processing :: General",
	"Topic :: Text Processing :: Markup",
	"Topic :: Text Processing :: Markup :: HTML",
	"Topic :: Text Processing :: Markup :: Markdown",
	"Topic :: Utilities",
	"Typing :: Typed",
]
dependencies = [
	"aioshutil>=1.6.0",
	"anyio>=3.6.2",
	"asyncstdlib>=3.10.6",
	"more-itertools>=9.1.0",
	"regex>=2022.10.31",
	"wcwidth>=0.4.0",
]
description = "Generate text using code."
keywords = []
license = {file = "LICENSE.txt"}
name = "pytextgen"
readme = "README.md"
requires-python = ">=3.12.0"
version = "7.0.0"

[project.urls]
repository = "https://github.com/polyipseity/pytextgen.git"

[dependency-groups]
dev = [
  "hypothesis>=6.151.0",
  "prek>=0.3.0",
  "pyright>=1.1.408",
  "pytest>=9.0.0",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=7.0.0",
  "pytest-xdist>=3.8.0",
  "ruff>=0.15.0",
]

[tool.pyright]
exclude = ["**/node_modules", "**/__pycache__", "**/.*", ".venv"]
typeCheckingMode = "strict"
venv = ".venv"
venvPath = "."

[[tool.pyright.executionEnvironments]]
extraPaths = ["."]
reportPrivateUsage = "none"
root = "tests"

[[tool.pyright.executionEnvironments]]
root = "."

[tool.pytest.ini_options]
addopts = ["--cov=./", "--cov-report=term-missing", "--dist=loadscope", "-n=auto", "--strict-markers"]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
# Enable Pylint-derived rule that disallows imports outside module top-level
# (import-outside-top-level / PLC0415). Ruff 0.12.0+ provides this rule.
extend-select = ["I", "PLC0415"]

[tool.uv]
required-version = ">=0.10.0,<0.11.0"
