[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

# update `__init__.py`
[project]
authors = [
	{name = "William So", email = "polyipseity@gmail.com"},
]
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Framework :: AsyncIO",
	"Intended Audience :: Other Audience",
	"License :: OSI Approved",
	"License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
	"Natural Language :: English",
	"Operating System :: OS Independent",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Topic :: Text Processing",
	"Topic :: Text Processing :: General",
	"Topic :: Text Processing :: Markup",
	"Topic :: Text Processing :: Markup :: HTML",
	"Topic :: Text Processing :: Markup :: Markdown",
	"Topic :: Utilities",
	"Typing :: Typed",
]
dependencies = [
	"aioshutil>=1.6.0",
	"anyio>=3.6.2",
	"asyncstdlib>=3.10.6",
	"more-itertools>=9.1.0",
	"pydantic>=2.12.0",
	"regex>=2022.10.31",
	"wcwidth>=0.4.0",
]
description = "Generate text using code."
keywords = []
license = {file = "LICENSE.txt"}
name = "pytextgen"
readme = "README.md"
requires-python = ">=3.12.0"
version = "8.0.0"

[project.scripts]
pytextgen = "pytextgen.__main__:main"
pytextgen_clear = "pytextgen.clear.__main__:main"
pytextgen_generate = "pytextgen.generate.__main__:main"

[project.urls]
repository = "https://github.com/polyipseity/pytextgen.git"

[dependency-groups]
dev = [
  "hypothesis>=6.151.0",
  "prek>=0.3.0",
  "pyright>=1.1.408",
  "pytest>=9.0.0",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=7.0.0",
  "pytest-xdist>=3.8.0",
  "ruff>=0.15.0",
  "rumdl>=0.1.15",
]

[tool.pyright]
exclude = ["**/node_modules", "**/__pycache__", "**/.*", ".venv"]
typeCheckingMode = "strict"
venv = ".venv"
venvPath = "."
pythonPlatform = "All"
pythonVersion = "3.12"
deprecateTypingAliases = true
enableReachabilityAnalysis = true
strictDictionaryInference = true
strictListInference = true
strictSetInference = true

[[tool.pyright.executionEnvironments]]
root = "src"

[[tool.pyright.executionEnvironments]]
extraPaths = ["src"]
reportPrivateUsage = "none"
root = "tests"

[tool.pytest.ini_options]
addopts = ["--cov=./", "--cov-report=term-missing", "--dist=loadscope", "-n=auto", "--strict-markers"]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
# Enable Pylint-derived rule that disallows imports outside module top-level
# (import-outside-top-level / PLC0415). Ruff 0.12.0+ provides this rule.
extend-select = ["I", "PLC0415"]

# rumdl (Markdown linter/formatter) configuration - prefer storing in pyproject
# so tools discover it when running from subdirectories.
[tool.rumdl]
include = ["**/*.md", "**/*.mdoc", "**/*.mdown", "**/*.mdx", "**/*.mkd", "**/*.mkdn", "**/*.markdown", "**/*.rmd"]
respect-gitignore = true

[tool.uv]
required-version = ">=0.10.0,<0.11.0"

[tool.uv.build-backend]
source-include = ["py.typed"]
